<resources>
    <string name="app_name" translatable="false">ChitChat</string>
    <string name="welcomeToChitChat">Welcome To ChitChat</string>
    <string name="sendCode">send code</string>
    <string name="phoneNumber" translatable="false">--- --- -- --</string>
    <string name="phoneNumberXX" translatable="false">--- ---</string>
    <string name="signIn">sign in</string>
    <string name="enter_sms_code">enter sms code</string>
    <string name="imageview" translatable="false">imageview</string>
    <string name="chitchat" translatable="false">ChitChat</string>
    <string name="login">login</string>
    <string name="resend_code"><u>did not get the code? resend</u></string>
    <string name="logout">logout</string>
</resources>