<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    android:padding="50dp">


    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/imageview"
        app:layout_constraintBottom_toTopOf="@+id/tv_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="logo.json"/>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeToChitChat"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ccp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:ccpDialog_backgroundColor="@color/white"
        app:ccpDialog_textColor="@color/darkBlue"
        app:ccp_arrowColor="@color/white"
        app:ccp_autoDetectLanguage="true"
        app:ccp_contentColor="@color/white"
        app:ccp_showFlag="false"
        app:layout_constraintBottom_toTopOf="@+id/roundableLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <EditText
        android:id="@+id/et_phone_number"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:hint="@string/phoneNumber"
        android:inputType="phone"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/ccp"
        app:layout_constraintEnd_toEndOf="@+id/tv_welcome"
        app:layout_constraintStart_toEndOf="@+id/ccp"
        app:layout_constraintTop_toTopOf="@+id/ccp" />


    <com.tistory.zladnrms.roundablelayout.RoundableLayout
        android:id="@+id/roundableLayout"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_welcome"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/ccp">

        <Button
            android:id="@+id/btn_send_code"
            style="@style/buttonHint"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/sendCode"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.tistory.zladnrms.roundablelayout.RoundableLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/roundableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/roundableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>